[Add] RabbitMQ 설정 파일 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# springboot port
+server.port=8088
+
 spring.application.name=rabbitmq-test
+
+logging.level.root=info
+
+# RabbitMQ setting
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=dev
+spring.rabbitmq.password=dev1234
+spring.rabbitmq.virtual-host=/
+
+
