[Add] RabbitMQ 설정 및 Direct 타입 Exchange 전송 테스트코드 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.application.name=rabbitmq-test
 logging.level.root=info
 
 # RabbitMQ setting
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=13.125.253.193
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
 spring.rabbitmq.virtual-host=/
 
-
+# health ????? ???
+management.endpoints.web.exposure.include=health
