--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
 spring.rabbitmq.virtual-host=/
 
-# health ????? ???
-management.endpoints.web.exposure.include=health
+# application status check
+management.endpoints.web.exposure.include=health,info
