[Add & Fix] host 주소 수정, 새로운 속성 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
 # springboot port
 server.port=8088
-
 spring.application.name=rabbitmq-test
-
 logging.level.root=info
 
 # RabbitMQ setting
-spring.rabbitmq.host=13.125.253.193
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
 spring.rabbitmq.virtual-host=/
 
-# application status check
-management.endpoints.web.exposure.include=health,info
+# RabbitMQ binding Exchange Name
+rabbitmq.direct.exchange.name=rabbit.direct
+rabbitmq.fanout.exchange.name=rabbit.fanout
+rabbitmq.header.exchange.name=rabbit.header
+rabbitmq.topic.exhange.name=rabbit.header
+
+rabbitmq.direct.exchange.key=direct.key
+
+# RabbitMQ Queue Name
+rabbitmq.direct.queue.name=direct.queue
+rabbitmq.fanout.queue.name.one=fanout.queue.one
+rabbitmq.fanout.queue.name.two=fanout.queue.two
+rabbitmq.header.queue.name=header.queue
+rabbitmq.topic.queue.name=topic.queue
+
