[Add] config 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.rabbitmq.virtual-host=/
 rabbitmq.direct.exchange.name=rabbit.direct
 rabbitmq.fanout.exchange.name=rabbit.fanout
 rabbitmq.header.exchange.name=rabbit.header
-rabbitmq.topic.exhange.name=rabbit.header
+rabbitmq.topic.exchange.name=rabbit.topic
 
 rabbitmq.direct.exchange.key=direct.key
 
