[Fix] deadLetter 프로젝트 properties 파일 수정

--- a/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
+++ b/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=rabbitmq-test
 logging.level.root=info
 
 # RabbitMQ setting
-spring.rabbitmq.host=52.79.77.230
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
@@ -12,16 +12,11 @@ spring.rabbitmq.virtual-host=/
 
 # RabbitMQ binding Exchange Name
 rabbitmq.direct.exchange.name=rabbit.direct
-rabbitmq.fanout.exchange.name=rabbit.fanout
-rabbitmq.header.exchange.name=rabbit.header
-rabbitmq.topic.exchange.name=rabbit.topic
-
-rabbitmq.direct.exchange.key=direct.key
+rabbitmq.fanout.exchange.name=rabbit.dead
 
 # RabbitMQ Queue Name
 rabbitmq.direct.queue.name=direct.queue
-rabbitmq.fanout.queue.name.one=fanout.queue.one
-rabbitmq.fanout.queue.name.two=fanout.queue.two
-rabbitmq.header.queue.name=header.queue
-rabbitmq.topic.queue.name=topic.queue
 rabbitmq.dead.queue.name=dead.queue
+
+# RabbitMQ Dead Routing Key
+rabbitmq.dead.routing.key=deadKey
