[Fix] Dead Exchange 정보 삭제

--- a/rabbitMQ_standard/src/main/resources/application.properties
+++ b/rabbitMQ_standard/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=rabbitmq-test
 logging.level.root=info
 
 # RabbitMQ setting
-spring.rabbitmq.host=52.79.77.230
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
@@ -24,4 +24,3 @@ rabbitmq.fanout.queue.name.one=fanout.queue.one
 rabbitmq.fanout.queue.name.two=fanout.queue.two
 rabbitmq.header.queue.name=header.queue
 rabbitmq.topic.queue.name=topic.queue
-rabbitmq.dead.queue.name=dead.queue
