[Fix] TTL 적용된 DirectExchange 관련 코드 수정

--- a/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
+++ b/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
@@ -12,11 +12,15 @@ spring.rabbitmq.virtual-host=/
 
 # RabbitMQ binding Exchange Name
 rabbitmq.direct.exchange.name=rabbit.direct
-rabbitmq.fanout.exchange.name=rabbit.dead
+rabbitmq.direct.ttl.exchange.name=rabbit.direct.ttl
+rabbitmq.dead.exchange.name=rabbit.dead
 
 # RabbitMQ Queue Name
 rabbitmq.direct.queue.name=direct.queue
+rabbitmq.direct.ttl.queue.name=direct.queue.ttl
 rabbitmq.dead.queue.name=dead.queue
 
 # RabbitMQ Dead Routing Key
 rabbitmq.dead.routing.key=deadKey
+rabbitmq.direct.routing.key=directKey
+rabbitmq.direct.ttl.routing.key=directTTLKey
