[Fix] 설정 주석문 수정

--- a/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
+++ b/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
@@ -20,7 +20,7 @@ rabbitmq.direct.queue.name=direct.queue
 rabbitmq.direct.ttl.queue.name=direct.queue.ttl
 rabbitmq.dead.queue.name=dead.queue
 
-# RabbitMQ Dead Routing Key
+# RabbitMQ Routing Key
 rabbitmq.dead.routing.key=deadKey
 rabbitmq.direct.routing.key=directKey
 rabbitmq.direct.ttl.routing.key=directTTLKey
