[Fix] 설정 수정 및 리스너 수정

--- a/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
+++ b/rabbitMQ_deadLetter_and_TTL/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.rabbitmq.username=dev
 spring.rabbitmq.password=dev1234
 spring.rabbitmq.virtual-host=/
 
+# RabbitMQ listener setting
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
 # RabbitMQ binding Exchange Name
 rabbitmq.direct.exchange.name=rabbit.direct
 rabbitmq.direct.ttl.exchange.name=rabbit.direct.ttl
